# PocketQube-Firmware-2023

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  bmp280.c  bmp280.h  buzzer.pio  hw_config.c  main.c  main.cpp  main_functions.cpp  main_functions.h  model.cpp  qubesettings.h  sattelite_data.hpp
climate-model/: fingerprint.pb  keras_metadata.pb  saved_model.pb
climate-model/variables/: variables.data-00000-of-00001  variables.index
